feat(interact): right-click menus on NPCs, panels and buyable slots
- InteractionService dispatches PlayerEntityInteractEvent by entity tag
- Clickable interaction hitboxes on plot/activity info panels; NPCs (client/
  staff) tagged so right-click opens a focused menu with info + actions
- SlotView shows a 'free slot' panel + hitbox over every unbought build slot;
  right-click opens a purchase menu (resolves the slot by position, robust to
  purchases)
- InteractionMenus builds focused menus reusing existing commands as buttons